--- a/public/project/client/views/profile/profile.view.html
+++ b/public/project/client/views/profile/profile.view.html
@@ -52,7 +52,7 @@
                 </div> -->
                 <div class="form-group">
                     <div class="col-sm-6 pull-right">
-                        <button ng-click="model.remove(currentUser)" type="submit" class="btn btn-danger btn-md">Delete My Account</button>
+                        <button data-toggle="modal" data-target="#deleteUser" type="submit" class="btn btn-danger btn-md">Delete My Account</button>
                     </div>
                     <div class="col-sm-3 pull-right">
                         <button ng-click="model.update(currentUser)" type="submit" class="btn btn-success btn-md">Update Profile</button>
@@ -64,5 +64,28 @@
             </form>
         </div>
     </div>
+
+    <!-- DELETE USER MODAL -->
+    <div class="modal fade" id="deleteUser" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h3>Are you sure you want to delete this course?</h3>
+                </div>
+                <div class="modal-body">
+                    <!-- <h3>Are you sure you want to delete this course?</h3> -->
+                    <button ng-click="model.remove(currentUser)" type="button" class="btn btn-success" data-dismiss="modal">Yes, delete it!</button>
+
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">No, go back!</button>
+                </div>
+                <div class="modal-footer">
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
     <div ng-include="'views/header/help-modal.html'"></div>
 </div>
