--- a/public/project/client/views/details/details.view.html
+++ b/public/project/client/views/details/details.view.html
@@ -65,7 +65,7 @@
             </div> -->
             <br>
             <div ng-if="model.data.likes">
-                <p class="detail-label">Other users that have favorited this course:</p>
+                <p class="detail-label">Users that have favorited this course:</p>
                 <ul>
                     <li ng-repeat="user in model.data.likes">
                         <a href="#/profile/{{data.username}}">
