--- a/public/project/client/css/project-style.css
+++ b/public/project/client/css/project-style.css
@@ -535,8 +535,11 @@ p.dashboard-welcome {
     font-size: 14px;
 }
 .details h2 {
-    margin-bottom: 50px;
+    margin-bottom: 10px;
     margin-right: 30px;
+}
+.details .info-top {
+    margin-top: 30px;
 }
 .details .detail-label {
     font-weight: 700;
@@ -548,7 +551,7 @@ p.dashboard-welcome {
     display: inline-block;
 }
 .details .action-buttons button {
-    margin-left: 10px;
+    margin-right: 10px;
     margin-bottom: 12px;
 }
 .details .action-buttons button .fa {
