--- a/public/project/client/views/dashboard/dashboard.view.html
+++ b/public/project/client/views/dashboard/dashboard.view.html
@@ -1,4 +1,4 @@
-<div ng-controller="DashboardController" class="dashboard col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main dashboard">
+<div ng-controller="DashboardController as model" class="dashboard col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main dashboard">
     <h1>Dashboard<br><p class="dashboard-welcome">Welcome back, <strong>{{currentUser.firstName}}</strong>!</p></h1>
 
     <!-- <div ng-show="currentUser" class="pull-right search">
@@ -26,7 +26,7 @@
                 <div class="panel-heading"><i class="fa fa-star"></i>Favorited Courses</div>
                 <div class="panel-body">
                     <div class="list-group">
-                        <a href="#/details/{{course}}" class="list-group-item" ng-repeat="course in currentUser.likes">{{course}}</a>
+                        <a ng-repeat="course in model.user.likesCourses" href="#/details/{{course._id}}" class="list-group-item"><strong>{{course.subject}}{{course.number}}:</strong>&nbsp;&nbsp;{{course.title}}</a>
                     </div>
                 </div>
             </div>
