--- a/public/project/client/views/sidebar/sidebar.view.html
+++ b/public/project/client/views/sidebar/sidebar.view.html
@@ -13,6 +13,12 @@
         <li ng-class="{'active': $location.url()=='/favorited'}" ng-show="currentUser">
             <a href="#/favorited"><i class="fa fa-star"></i>Favorited</a>
         </li>
+        <!-- <li ng-class="{'active': $location.url()=='/completed'}" ng-show="currentUser">
+            <a href="#/completed"><i class="fa fa-graduation-cap"></i>Completed</a>
+        </li>
+        <li ng-class="{'active': $location.url()=='/progress'}" ng-show="currentUser">
+            <a href="#/progress"><i class="fa fa-book"></i>In Progress</a>
+        </li> -->
         <!-- <li ng-class="{'active': $location.url()=='/degree'}"  ng-show="currentUser.roles.indexOf('student') >= 0">
             <a href="#/degree"><i class="fa fa-graduation-cap"></i>Degree Tracking</a>
         </li> -->
