--- a/public/project/client/css/project-style.css
+++ b/public/project/client/css/project-style.css
@@ -37,6 +37,10 @@ h1 {
     border-radius: 0 !important;
 }
 
+.clicked {
+    color: #CC0000;
+}
+
 /******************* HEADER ********************/
 
 .header-container {
@@ -250,6 +254,9 @@ i.fa.fa-question-circle, i.fa.fa-cog {
     bottom: 3px;
     padding: 0 10px;
 }
+.sidebar .fa-star {
+    color: #aaa;
+}
 
 /****************** MOBILE NAV ********************/
 
@@ -313,19 +320,20 @@ select.form-control {
     outline: 1px solid #CCC;
     background-color: white;
 }
-.glyphicon {
-    font-size: 17px;
+.glyphicon, .fa {
+    font-size: 18px;
     top: 5px;
     margin: 0 5px;
     cursor: pointer;
+    vertical-align: middle;
 }
 @media screen and (max-width: 768px) {
-    .glyphicon {
+    .glyphicon, .fa {
         margin: 0 3px;
     }
 }
 @media screen and (max-width: 550px) {
-    .glyphicon {
+    .glyphicon, .fa {
         font-size: 16px;
     }
 }
@@ -371,6 +379,9 @@ select.form-control {
 }
 .marginTop20 {
     margin-top: 20px;
+}
+.fa-star {
+    color: #CC0000;
 }
 
 /***************** SEARCH BOX ******************/
@@ -490,8 +501,8 @@ p.dashboard-welcome {
     cursor: pointer;
 }
 .courses .fa {
-    font-size: 20px;
-    margin: 0 3px;
+    font-size: 18px;
+    margin: 0 5px;
     vertical-align: middle;
 }
 .courses .addCourseButton {
@@ -517,10 +528,20 @@ p.dashboard-welcome {
     width: 600px;
 }
 
-/****************** FAVORITED PAGE ****************/
+/****************** FAVORITED, COMPLETED, IN PROGRESS PAGE ****************/
 
 .favorited .fa {
-    font-size: 20px;
+    font-size: 18px;
+    margin: 0 3px;
+    vertical-align: middle;
+}
+.completed .fa {
+    font-size: 18px;
+    margin: 0 3px;
+    vertical-align: middle;
+}
+.inProgress .fa {
+    font-size: 18px;
     margin: 0 3px;
     vertical-align: middle;
 }
@@ -557,6 +578,16 @@ p.dashboard-welcome {
 .details .action-buttons button .fa {
     font-size: 16px;
     margin-right: 7px;
+}
+.details a.userLikes-link {
+    font-weight: 700;
+}
+.details a.userLikes-link .fa {
+    margin-right: 10px;
+}
+.details ul.userLikes {
+    /*display: none;*/
+    padding-left: 50px;
 }
 .details .modal-content, .courses .modal-content {
     font-weight: 500;
