--- a/public/project/client/views/courses/course.view.html
+++ b/public/project/client/views/courses/course.view.html
@@ -74,7 +74,7 @@
                                 <span ng-show="course.likes.indexOf(currentUser._id) > -1"><i class="fa fa-star"></i></span>
                             </a>
 
-                            <!-- <a ng-click="model.completeCourse(course)">
+                            <a ng-click="model.completeCourse(course)">
                                 <span ng-show="course.completed.indexOf(currentUser._id) == -1"><i class="fa fa-graduation-cap"></i></span>
                             </a>
                             <a ng-click="model.uncompleteCourse(course)">
@@ -86,7 +86,7 @@
                             </a>
                             <a ng-click="model.unprogressCourse(course)">
                                 <span ng-show="course.inprogress.indexOf(currentUser._id) > -1"><i class="fa fa-book clicked"></i></span>
-                            </a> -->
+                            </a>
 
                         </td>
                     </tr>
