--- a/public/project/client/views/details/details.view.html
+++ b/public/project/client/views/details/details.view.html
@@ -7,9 +7,26 @@
                 <button ng-show="model.data.likes.indexOf(currentUser._id) == -1" ng-click="model.favoriteCourse(model.data)" class="btn btn-default">
                     <i class="fa fa-star-o"></i><span class="button-span">Favorite</span>
                 </button>
-                <button ng-click="model.unfavoriteCourse(model.data)" ng-show="model.data.likes.indexOf(currentUser._id) > -1" class="btn btn-default">
+                <button ng-show="model.data.likes.indexOf(currentUser._id) > -1" ng-click="model.unfavoriteCourse(model.data)" class="btn btn-default">
                     <i class="fa fa-star"></i><span class="button-span">Unfavorite</span>
                 </button>
+
+
+                <button ng-show="model.data.completed.indexOf(currentUser._id) == -1" ng-click="model.completeCourse(model.data)" class="btn btn-default">
+                    <i class="fa fa-graduation-cap"></i><span class="button-span">Complete</span>
+                </button>
+                <button ng-show="model.data.completed.indexOf(currentUser._id) > -1" ng-click="model.uncompleteCourse(model.data)" class="btn btn-default">
+                    <i class="fa fa-graduation-cap clicked"></i><span class="button-span">Uncomplete</span>
+                </button>
+
+
+                <button ng-show="model.data.inprogress.indexOf(currentUser._id) == -1" ng-click="model.progressCourse(model.data)" class="btn btn-default">
+                    <i class="fa fa-book"></i><span class="button-span">Favorite</span>
+                </button>
+                <button ng-show="model.data.inprogress.indexOf(currentUser._id) > -1" ng-click="model.unprogressCourse(model.data)" class="btn btn-default">
+                    <i class="fa fa-book clicked"></i><span class="button-span">Unfavorite</span>
+                </button>
+
 
                 <button ng-show="currentUser.roles.indexOf('admin') >= 0" class="btn btn-default editCourseButton" data-toggle="modal" data-target="#editCourse"><i class="fa fa-pencil"></i><span class="button-span">Edit</span></button>
 
