--- a/public/project/client/views/details/details.view.html
+++ b/public/project/client/views/details/details.view.html
@@ -82,9 +82,8 @@
             </div> -->
             <br>
 
-            <div ng-if="model.course.userLikes.length">
-                <!--<p class="detail-label">Other users who like this course:</p>-->
-                <a id="userLikes-link" class="userLikes-link" ng-if="model.course.userLikes.length"><i class="fa fa-star"></i>{{model.course.userLikes.length}} Users Favorited This Course</a>
+            <!-- <div ng-if="model.course.userLikes.length">
+                <p class="detail-label">{{model.course.userLikes.length}} Users Favorited This Course</p>
                 <ul class="userLikes">
                     <li ng-repeat="user in model.course.userLikes">
                         <a href="">
@@ -92,7 +91,7 @@
                         </a>
                     </li>
                 </ul>
-            </div>
+            </div> -->
 
             <!-- EDIT COURSE MODAL -->
             <div class="modal fade" id="editCourse" role="dialog">
