--- a/public/project/client/css/project-style.css
+++ b/public/project/client/css/project-style.css
@@ -41,6 +41,7 @@ h1 {
     color: #CC0000;
 }
 
+
 /******************* HEADER ********************/
 
 .header-container {
@@ -275,7 +276,7 @@ i.fa.fa-question-circle, i.fa.fa-cog {
     }
     .mobile-nav > li > a:hover, .mobile-nav > li > a:focus {
         background: #615445;
-        border-left: 5px solid #615445;
+        border-left: 5px solid #8e2a2a;
         color: #fff !important;
     }
     .mobile-nav > .active > a, .mobile-nav > .active > a:hover, .mobile-nav > .active > a:focus {
@@ -482,10 +483,10 @@ p.dashboard-welcome {
     margin-top: 5px;
 }
 .dashboard .schedule-panel, .dashboard .dates-panel {
-    height: 300px;
+    /*height: 300px;*/
 }
 .dashboard .exam-panel, .dashboard .grades-panel, .dashboard .advisors-panel {
-    height: 300px;
+    /*height: 300px;*/
 }
 .dashboard .panel .fa {
     margin-right: 10px;
@@ -505,11 +506,12 @@ p.dashboard-welcome {
 }
 .courses .addCourseButton {
     margin-left: 50px;
-    margin-bottom: 12px;
+    margin-bottom: 15px;
 }
 .courses .addCourseButton .fa {
     font-size: 16px;
     margin-right: 7px;
+    margin-left: 0;
 }
 .courses table td.subject, .courses table td.number, .courses table td.title {
     table-layout: fixed;
@@ -589,11 +591,15 @@ p.dashboard-welcome {
 }
 .details .action-buttons button {
     margin-right: 10px;
-    margin-bottom: 12px;
+    margin-bottom: 15px;
 }
 .details .action-buttons button .fa {
     font-size: 16px;
     margin-right: 7px;
+    margin-left: 0;
+}
+.details .action-buttons button .fa.margin-zero {
+    margin: 0;
 }
 .details a.userLikes-link {
     font-weight: 700;
