--- a/public/project/client/views/dashboard/dashboard.view.html
+++ b/public/project/client/views/dashboard/dashboard.view.html
@@ -14,8 +14,8 @@
         <div class="col-sm-7 col-md-7">
             <div class="panel panel-default schedule-panel">
                 <div class="panel-body">
-                    <p>Welcome to CourseSource! Browsing through Northeastern's many courses has never been easier! With CourseSource, you can easily find information on courses that you are going to or want to take. For easy browsing, you can even favorite courses so you can conveniently come back to read about them later.</p>
-                    <p>Navigate through CourseSource by clicking the links on the left sidebar. Students can view courses, favorite courses, and view the details and prereqs for each course. Admins and faculty can add, update, and delete users as well as view and favorite courses.</p>
+                    <p>Welcome to CourseSource! Browsing through Northeastern's many courses has never been easier! With CourseSource, you can easily find information on courses that you are are planning to at Northeastern. For easy browsing, you can even favorite courses so you can conveniently come back to read about them later.</p>
+                    <p>Students can view important information for each course, including course details and prereqs, as well as add courses to their completed or in-progress lists. Admins and faculty can add, update, and delete courses as well as users.</p>
                     <!-- <p>CourseSource is your #1 web resource for browsing, searching, and choosing courses at Northeastern!</p> -->
                 </div>
             </div>
