--- a/public/project/client/views/courses/course.view.html
+++ b/public/project/client/views/courses/course.view.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main courses">
             <h1>All Courses</h1>
-            <button ng-show="currentUser.roles.indexOf('admin') >= 0" class="btn btn-default addCourseButton" data-toggle="modal" data-target="#createCourse"><i class="fa fa-plus"></i>Add New Course</button>
+            <button ng-show="currentUser.roles.indexOf('admin') >= 0" class="btn btn-default addCourseButton" data-toggle="modal" data-target="#createCourse"><i class="fa fa-plus"></i>Add <span class="new-course">New Course</span></button>
 
             <div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
 
@@ -65,7 +65,7 @@
                         <td class="subject"><a href="#/details/{{course._id}}">{{course.subject}}</a></td>
                         <td class="number"><a href="#/details/{{course._id}}">{{course.number}}</a></td>
                         <td class="title"><a href="#/details/{{course._id}}">{{course.title}}</a></td>
-                        
+
                         <td class="table-nowrap">
                             <a ng-click="model.favoriteCourse(course)">
                                 <span ng-show="course.likes.indexOf(currentUser._id) == -1"><i class="fa fa-star-o"></i></span>
